# SPDX-FileCopyrightText: The discro authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "discro"
description = "DISCRete Observables for asynchronous Functional Reactive Programming (FRP)."
version = "0.28.2"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/discro"
keywords = ["async", "await", "reactive", "observable", "synchronization"]
categories = ["asynchronous", "concurrency"]
rust-version = "1.75"
edition = "2021"
include = ["/src", "/README.md", "/LICENSES"]

[dependencies]
async-stream = { version = "0.3.5", optional = true }
futures-core = { version = "0.3.30", optional = true, default-features = false }
thiserror = "1.0.56"

[dependencies.tokio]
version = "1.35.1"
optional = true
default-features = false
features = ["sync"]

[dev-dependencies.tokio]
version = "1.35.1"
features = ["macros", "rt", "time"]

[features]
default = ["async-stream"]
async-stream = ["dep:async-stream", "dep:futures-core"]
tokio = ["dep:tokio"]

[lints.rust]
future_incompatible = "warn"
let_underscore = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = "warn"
rust_2021_compatibility = "warn"
unreachable_pub = "warn"
unsafe_code = "warn"
unused = "warn"

[lints.clippy]
pedantic = "warn"
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
self_named_module_files = "warn"
