# SPDX-FileCopyrightText: The discro authors
# SPDX-License-Identifier: MPL-2.0

[package]
name = "discro"
description = "DISCRete Observables for asynchronous Functional Reactive Programming (FRP)."
version = "0.34.0"
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/uklotzde/discro"
keywords = ["async", "await", "reactive", "observable", "synchronization"]
categories = ["asynchronous", "concurrency"]
rust-version = "1.85"
edition = "2024"
include = ["README.md", "LICENSES/", "src/"]

[dependencies]
async-stream = { version = "0.3.5", optional = true }
futures-core = { version = "0.3.30", optional = true, default-features = false }
thiserror = "2.0.10"

[dependencies.tokio]
version = "1.39.1"
optional = true
default-features = false
features = ["sync"]

[dev-dependencies.tokio]
version = "1.39.1"
features = ["macros", "rt", "time"]

[features]
default = ["async-stream"]
async-stream = ["dep:async-stream", "dep:futures-core"]
tokio = ["dep:tokio"]

[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
missing_debug_implementations = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }
unreachable_pub = "warn"
unsafe_code = "warn"
unused = { level = "warn", priority = -1 }

# Opt-in to the shorter lifetime of temporary values introduced by Edition 2024.
tail_expr_drop_order = "allow"

[lints.clippy]
pedantic = "warn"
clone_on_ref_ptr = "warn"
missing_const_for_fn = "warn"
self_named_module_files = "warn"
